--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                             <h7>FAVOURITE</h7>
                             <a href="https://catherine244.github.io/favourite/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a>
                         </div>
+                        <div id="contacts">
+                            <a href="https://api.whatsapp.com/send?phone=whatsappphonenumber&text=hi there"></a>
+                        </div>
 </div>
 </body>
 </html>
