added a README.md file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a href="https://catherine244.github.io/favourite/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a>
                         </div>
                         <div id="contacts">
-                            <a href="https://api.whatsapp.com/send?phone=whatsappphonenumber&text=hi there"></a>
+                            <a href="#"><i class="fa fa- twitter"></i></a>
                         </div>
 </div>
 </body>
