deleted the contacts icons.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
                             <h7>FAVOURITE</h7>
                             <a href="https://catherine244.github.io/favourite/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a>
                         </div>
+
                         <div id="contacts">
-                            <a href="#"><i class="fa fa- twitter"></a>
+                                <form>
+                                        First name:<br>
+                                        <input type="text" name="firstname"><br>
+                                        Last name:<br>
+                                        <input type="text" name="lastname">
+                                      </form>
                         </div>
 </div>
 </body>
