added a button on the form

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                         <input type="text" name="firstname"><br>
                                         Last name:<br>
                                         <input type="text" name="lastname">
+                                        <button type="button">submit</button>
                                       </form>
                         </div>
 </div>
