--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                                         <button type="button">submit</button>
                                       </form>
                         </div>
+                    <div class="footer">
+                        <ul>
+                            <li>&copy; Facebook: @cate Nduku</li>
+                            <li>&copy; Instagram: @cate Nduku</li>
+                            <li>&copy; Contacts: @ 0701646673</li>
+                            <li>&copy; Youtube: @cate Nduku</li>
+                        </ul>
+                    </div>
 </div>
 </body>
 </html>
