editted the footer

--- a/index.html
+++ b/index.html
@@ -63,12 +63,9 @@
                                       </form>
                         </div>
                     <div class="footer">
-                        <ul>
-                            <li>&copy; Facebook: @cate Nduku</li>
-                            <li>&copy; Instagram: @cate Nduku</li>
-                            <li>&copy; Contacts: @ 0701646673</li>
-                            <li>&copy; Youtube: @cate Nduku</li>
-                        </ul>
+                        
+                           <p> &copy; Facebook: @cate Nduku Instagram: @cate Nduku Contacts: @ 0701646673 Youtube: @cate Nduku
+                    </p>
                     </div>
 </div>
 </body>
