--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                         </div>
                     <div class="footer">
                         
-                           <p> &copy; Facebook: @cate Nduku Instagram: @cate Nduku Contacts: @ 0701646673 Youtube: @cate Nduku
-                    </p>
+                           <p> &copy; Facebook: @cate Nduku Instagram: @cate Nduku Contacts: @ 0701646673 Youtube: @cate Nduku</p>
                     </div>
 </div>
 </body>
