changed contacts background color

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 </div> 
                         <div id="projects">
                             <h7>FAVOURITE</h7>
-                            <a href="https://catherine244.github.io/favourite/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a>
+                            <a href="https://catherine244.github.io/favourite/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a
+                            
                         </div>
 
                         <div id="contacts">
