corrected word spelling on job experience

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>2013: Kenya Certificate of Secondary Education, Muthale Girls School</p>
                 <p>2009: Kenya Certificate of Primary Education, Malivani A.I.C  Boarding primary</p>
         <h5>JOB EXPERIENCE</h5>
-        <P> September 2018 to May 2019 African Boma echnical Support Officer <br>
+        <P> September 2018 to May 2019 African Boma technical Support Officer <br>
             February 2017 to September 2017 Survey of kenya
                         I worked in the ICT Department undertook the following duties and functions:
                         Training on company’s software suite and installation.
