changed project name from favourite to jewelleries

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     
                 </div> 
                         <div id="projects">
-                            <h7 class ="bg-success">FAVOURITE</h7>
+                            <h7 class ="bg-success">jewelleries</h7>
                             <a href="https://catherine244.github.io/jewelleries/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a
                             
                         </div>
