changed project id image source

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div> 
                         <div id="projects">
                             <h7 class ="bg-success">jewelleries</h7>
-                            <a href="https://catherine244.github.io/jewelleries/"> <img src="https://bit.ly/2Ms36fE" height="300px" width="300px"> </a
+                            <a href="https://catherine244.github.io/jewelleries/"> <img src="https://bit.ly/2ByaNKY" height="300px" width="300px"> </a
                             
                         </div>
 
