added a heading showing my recent project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     </div>
   <nav>
       <div class="card">
-          <div class="card-body">
     <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
@@ -54,7 +53,7 @@
                     
                 </div> 
                         <div id="projects">
-                            <h7 class ="bg-success">jewelleries</h7>
+                            <h7 class ="bg-success">Recent project about jewelleries</h7>
                             <a href="https://catherine244.github.io/jewelleries/"> <img src="https://bit.ly/2ByaNKY" height="300px" width="300px"> </a
                             
                         </div>
