changed id contacts height

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <h1>CATHERINE NDUKU</h1> 
     </div>
   <nav>
-      <div class="card">
     <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
@@ -48,7 +47,7 @@
                         Management of data needed for old and new clients in the company.
                         Report Presentation to management for Decision Making Support.
                         </P>
-                        <h6>INTEREST</h6>
+                        <h6 class=>INTEREST</h6>
                     <p> Swimming , Travelling ,Reading </p>
                     
                 </div> 
